pre-testing check in

--- a/src/app/recipe-detail/recipe-detail.component.css
+++ b/src/app/recipe-detail/recipe-detail.component.css
@@ -27,3 +27,20 @@ button:disabled {
   color: #ccc; 
   cursor: auto;
 }
+
+
+[md-list-avatar] {
+  cursor: pointer;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.ing-button {
+  margin-bottom: 10px;
+}
+
+.instruction-number {
+  margin-right: 10px;
+}
