--- a/src/app/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-detail/recipe-detail.component.html
@@ -8,6 +8,8 @@
 	
 
 	<md-card class="app-input-section">
+
+		
 		
 		<md-input placeholder="Recipe Name" [(ngModel)]="recipe.name" class="full-width"></md-input>
 
@@ -38,7 +40,9 @@
 			</md-list-item>
 		</md-list>
 
+		<button md-raised-button type="button" (click)="updateRecipe()">SAVE</button>
 
+		
 
 	</md-card>
 		
