more things, more code written, gettin better

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,12 +2,12 @@
 	Newest Recipes
 </h3>
 
-<div class="card-container">
-<md-card *ngFor="let recipe of recipes" >
-	<md-card-title color="primary">{{recipe.name}}</md-card-title>
-	<md-card-content>{{recipe.description}}</md-card-content>
-	<md-card-actions>
-		<button md-button (click)="gotoRecipe(recipe)">VIEW</button>
-	</md-card-actions>
-</md-card>
+<div class="card-container row">
+	<md-card *ngFor="let recipe of recipes" class="column">
+		<md-card-title color="primary">{{recipe.name}}</md-card-title>
+		<md-card-content>{{recipe.description}}</md-card-content>
+		<md-card-actions>
+			<button md-button (click)="gotoRecipe(recipe)">VIEW</button>
+		</md-card-actions>
+	</md-card>
 </div>
