--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
 		<md-nav-list>
 			<a md-list-item routerLink="/dashboard" (click)="start.close()">Home</a>
 			<a md-list-item routerLink="/recipes" (click)="start.close()">Recipes</a>
+			<a md-list-item routerLink="/new" (click)="start.close()">New Recipe</a>
 		</md-nav-list>
 
 		<button md-button #mybutton (click)="start.close()">Close</button>
