--- a/src/app/recipe-view/recipe-view.component.html
+++ b/src/app/recipe-view/recipe-view.component.html
@@ -21,7 +21,9 @@
 		<md-card-actions>
 			<button md-raised-button (click)="goBack()">BACK</button>
 			<button md-raised-button (click)="editRecipe()">EDIT</button>
-			<button md-raised-button (click)="deleteRecipe()">DELETE</button>
+			<button md-raised-button *ngIf="!deleting" (click)="deleting = true">DELETE</button>
+			<button md-raised-button *ngIf="deleting" color="primary" (click)="deleting = false">CANCEL</button>
+			<button md-raised-button *ngIf="deleting" color="accent" (click)="deleteRecipe()">For Real Delete</button>
 		</md-card-actions>
 	</md-card>
 
