--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,22 +3,14 @@
 <h3>Recipes</h3>
 
 <button md-icon-button (click)="addNewRecipe()">
-  <i class="material-icons">add_circle_outline</i>
+  <i class="material-icons">add_circle_outline</i> ADD RECIPE
 </button>
 
-<ul class="recipes">
-  <li *ngFor="let recipe of recentRecipes"
-    [class.selected]="recipe === selectedRecipe"
-    (click)="gotoRecipe(recipe)">
-    <span class="badge">{{recipe.id}}</span> {{recipe.name}}
-  </li>
-</ul>
-
-
 <md-list>
-  <md-list-item *ngFor="let recipe of recentRecipes"
-    (click)="gotoRecipe(recipe)">
-    <span class="badge">{{recipe.id}}</span> {{recipe.name}}
+  <md-list-item *ngFor="let recipe of recentRecipes" (click)="gotoRecipe(recipe)">
+    <img md-list-avatar src="assets/monkeys.jpg" alt="monkey">
+    <h5 md-line>{{recipe.name}}</h5>
+    <p md-line class="recipeDescription">{{recipe.description}}</p>    
   </md-list-item>
 </md-list>
 
