--- a/src/app/recipes/recipes.component.css
+++ b/src/app/recipes/recipes.component.css
@@ -5,3 +5,16 @@ md-list-item {
 .recipeDescription {
     color: gray;
 }
+
+
+@media screen and (min-width: 800px) {
+  ._10 {
+    flex: 1.0;
+  }
+  ._80 {
+    flex: 8.0;
+  }
+  ._20 {
+    flex: 2;
+  }
+}
