--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,4 +1,4 @@
-[class*='col-'] {
+/*[class*='col-'] {
   float: left;
 }
 *, *:after, *:before {
@@ -57,7 +57,7 @@ h4 {
     .module {
       min-width: 60px;
     }
-}
+}*/
 
 .card-container {
     display: flex;
@@ -69,7 +69,18 @@ md-card {
     width: 350px;
 }
 
-
 .upperButton {
   margin-bottom: 10px;
+}
+
+@media screen and (min-width: 800px) {
+  ._10 {
+    flex: 1.0;
+  }
+  ._80 {
+    flex: 8.0;
+  }
+  ._20 {
+    flex: 2;
+  }
 }
