--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -2,20 +2,24 @@
 
 <h3>Recipes</h3>
 
+<div class="row">
 
-<button md-mini-fab (click)="addNewRecipe()">
-  <!--<i class="material-icons md-24">add_circle_outline</i>-->
-  <i class="material-icons md-24">add</i>
-</button>
+  <div class="column _10">
+    <button md-mini-fab (click)="addNewRecipe()">  
+      <i class="material-icons md-24">add</i>
+    </button>
+  </div>
 
+  <div class="column _80">
 
-<md-list>
-  <md-list-item *ngFor="let recipe of recentRecipes" (click)="gotoRecipe(recipe)">
-    <img md-list-avatar src="assets/monkeys.jpg" alt="monkey">
-    <h5 md-line>{{recipe.name}}</h5>
-    <p md-line class="recipeDescription">{{recipe.description}}</p>    
-  </md-list-item>
-</md-list>
+    <md-list>
+      <md-list-item *ngFor="let recipe of recentRecipes" (click)="gotoRecipe(recipe)">
+        <img md-list-avatar src="assets/monkeys.jpg" alt="monkey">
+        <h5 md-line>{{recipe.name}}</h5>
+        <p md-line class="recipeDescription">{{recipe.description}}</p>    
+      </md-list-item>
+    </md-list>
 
+  </div>
+</div>
 
-<!--<app-recipe-detail [recipe]="selectedRecipe"></app-recipe-detail>-->
