added module for adding new tags for recipes

--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -14,10 +14,7 @@
 		</li>
 	</ul>
 
-	<button (click)="addingTag = true">Add Tag</button>
-	<div *ngIf="addingTag">
-		<input type="text" />
-	</div>
+	<app-add-new-tag></app-add-new-tag>
 		
 
 	</div>
