--- a/src/app/add-new-tag/add-new-tag.component.html
+++ b/src/app/add-new-tag/add-new-tag.component.html
@@ -2,10 +2,13 @@
 <!--
 <button (click)="addingTag = true">Add Tag</button>-->
 
-<button md-raised-button *ngIf="!addingTag" (click)="addingTag = true" class="ing-button">Add Tag</button>
-<button md-raised-button *ngIf="addingTag" color="primary" (click)="addThisTag()" class="ing-button">Save</button>
+<button md-mini-fab *ngIf="!addingTag" (click)="initiateAdding()" class="ing-button">
+	<i class="material-icons md-24">add</i>
+</button>
+<!--<button md-raised-button *ngIf="addingTag" color="primary" (click)="addThisTag()" class="ing-button">Save</button>-->
 
 
 <div *ngIf="addingTag" class="add-tag-section">
-	<md-input placeholder="Tag Name" [(ngModel)]="newTagName" class="full-width" (keypress)="checkingForEnter($event, i)"></md-input>
+	<!--<md-input #tagInput placeholder="Tag Name" [(ngModel)]="newTagName" class="full-width" (keypress)="checkingForEnter($event, i)"></md-input>-->
+	<app-autofocus-input (onCompletion)="onCompletion($event)" (onCancellation)="onCancellation()"></app-autofocus-input>
 </div>
