--- a/src/app/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-detail/recipe-detail.component.html
@@ -6,7 +6,7 @@
 		
 		<md-card-title>{{recipe.name}}</md-card-title>
 		
-		<md-input placeholder="Recipe Name" [(ngModel)]="recipe.name" class="full-width"></md-input>
+		<md-input placeholder="Recipe Name" [(ngModel)]="recipe.recipeName" class="full-width"></md-input>
 
 		<md-input placeholder="Description" [(ngModel)]="recipe.description" class="full-width"></md-input>
 
