--- a/src/app/ingredient-editor/ingredient-editor.component.html
+++ b/src/app/ingredient-editor/ingredient-editor.component.html
@@ -4,10 +4,15 @@
 <button md-mini-fab (click)="addIngredient()">  
 	<i class="material-icons md-24">add</i>
 </button>
+<button md-mini-fab color="accent">
+	<i class="material-icons md-24">trash</i>
+</button>
+
 <md-list dense>
 	<md-list-item *ngFor="let ing of ingredientGroup.ingredients; let i = index; trackBy: custom">				
 		<md-icon md-list-avatar (click)="deleteIngredient(i)">delete</md-icon>
-		<md-input placeholder="ingredient {{i + 1}}" [(ngModel)]="ing[i]" (keypress)="checkingForEnter($event, i)"></md-input>
+		<!--<md-input placeholder="ingredient {{i + 1}}" [(ngModel)]="ing[i]" (keypress)="checkingForEnter($event, i)"></md-input>-->
+		<app-autofocus-input [itemForInput]="ing[i]" (onCompletion)="addIngredient()"></app-autofocus-input>
 	</md-list-item>
 </md-list>
 		
