--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,7 +1,6 @@
 
 
 
-
 <div class="row">
 
 	<div class="column _20">
@@ -13,16 +12,20 @@
 				<span class="mdl-chip__text">{{tag.name}}</span>
 			</button>
 		</div>
-	
-		
 
 	</div>
 
 	<div class="column _80">
 		<h4>Recipes</h4>
-		<button md-mini-fab (click)="addNewRecipe()">  
-			<i class="material-icons md-24">add</i>
-		</button>
+
+		<div>
+			<button md-mini-fab (click)="addNewRecipe()">  
+				<i class="material-icons md-24">add</i>
+			</button>
+
+			<recipe-search></recipe-search>
+		</div>
+
 		<md-list>
 			<md-list-item *ngFor="let recipe of recentRecipes" (click)="gotoRecipe(recipe)">
 				<img md-list-avatar src="assets/monkeys.jpg" alt="monkey">
