added some stuff for ngrx effects

--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -36,7 +36,7 @@
 
 		<div>
 			<h5 class="stupidClass">Those other guys</h5>
-			<!--{{$recipes | async | json}}-->
+			{{$recipes | async | json}}
 			<!--<ul>
 				<li *ngFor="let rec of $recipes.recipes | async"> {{ rec.recipeName }} </li>
 			</ul>-->
