--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -5,12 +5,15 @@
 
 	<div class="column _20">
 		<h4>Tags</h4>
+		
 		<app-add-new-tag></app-add-new-tag>
 
-		<div *ngFor="let tag of tags" >
-			<button type="button" class="mdl-chip" (click)="filterByTag(tag)">
-				<span class="mdl-chip__text">{{tag.name}}</span>
-			</button>
+		<div class="tag-area">
+			<div *ngFor="let tag of tags" >
+				<button type="button" class="mdl-chip" (click)="filterByTag(tag)">
+					<span class="mdl-chip__text">{{tag.name}}</span>
+				</button>
+			</div>
 		</div>
 
 	</div>
