--- a/src/app/add-new-tag/add-new-tag.component.html
+++ b/src/app/add-new-tag/add-new-tag.component.html
@@ -2,7 +2,7 @@
 <!--
 <button (click)="addingTag = true">Add Tag</button>-->
 
-<button md-mini-fab *ngIf="!addingTag" (click)="initiateAdding()" class="ing-button">
+<button md-mini-fab *ngIf="!addingTag" (click)="initiateAdding()" class="ing-button" title="Add New Tag">
 	<i class="material-icons md-24">add</i>
 </button>
 <!--<button md-raised-button *ngIf="addingTag" color="primary" (click)="addThisTag()" class="ing-button">Save</button>-->
