--- a/src/app/yummly/yummly.component.html
+++ b/src/app/yummly/yummly.component.html
@@ -6,5 +6,81 @@
 <div class="row">
 	<div class="column">
 		<md-input [(ngModel)]="searchTerm" (keypress)="checkingForEnter($event, i)"></md-input>
+		<button md-mini-fab (click)="searchYummly()" title="Search">
+			<i class="material-icons md-24">search</i>
+		</button>
+	</div>
+</div>
+
+<div class="row" *ngIf="searchResults">
+	<div class="column">
+		Total Results = {{searchResults.totalMatchCount}}
+
+		<table>
+			<tr>
+				<th></th>
+				<th>Title</th>
+				<th>Rating</th>
+			</tr>
+			<tr *ngFor="let rec of searchResults.matches">
+				<td><img src="{{rec.imageUrlsBySize[90]}}" /></td>
+				<td>
+					<h4>{{rec.recipeName}}</h4>
+					<div>{{rec.sourceDisplayName}}</div>
+				</td>
+				<td>
+					{{rec.rating}}
+				</td>
+			</tr>
+
+
+		</table>
+
+
+		<md-list>
+			<md-list-item *ngFor="let rec of searchResults.matches">
+				<img md-list-avatar src="{{rec.imageUrlsBySize[90]}}" alt="...">
+				<h3 md-line> {{rec.recipeName}} </h3>
+				<p md-line>
+					<span> {{rec.sourceDisplayName}} </span>
+					<span class="demo-2"> -- {{rec.rating}} </span>
+				</p>
+			</md-list-item>
+		</md-list>
+
+<!--
+<md-grid-list cols="4" [style.background]="'white'" gutterSize="4px">
+	<md-grid-tile 
+		*ngFor="let rec of searchResults.matches"
+		[style.background-image]="'url(' + rec.imageUrlsBySize[90] + ')'">
+		<h4>{{rec.recipeName}}</h4>
+		<p>{{rec.sourceDisplayName}}</p>
+	</md-grid-tile>
+</md-grid-list>
+-->
+
+
+
+<!--
+		<div class="recipe-card-square mdl-card mdl-shadow--2dp" *ngFor="let rec of searchResults.matches">
+			<div class="mdl-card__title mdl-card--expand"
+				[style.background-image]="'url(' + rec.imageUrlsBySize[90] + ')'"> 
+				
+				<h2 class="mdl-card__title-text">{{rec.recipeName}}</h2>
+			</div>
+			<div class="mdl-card__supporting-text">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+				Aenan convallis.
+			</div>
+			<div class="mdl-card__actions mdl-card--border">
+				<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+					View Updates
+				</a>
+			</div>
+		</div>
+-->
+
+
+
 	</div>
 </div>
