--- a/src/app/recipe-view/recipe-view.component.html
+++ b/src/app/recipe-view/recipe-view.component.html
@@ -12,7 +12,7 @@
 				</button>
 			</p>
 			<p>Serving Size : {{recipe.servingSize}}</p>
-			<p *ngIf="recipe.yummlyId.length > 1">Source : <a href="{{recipe.sourceUrl}}">{{recipe.sourceUrl}}</a></p>
+			<!--<p *ngIf="recipe.yummlyId.length > 1">Source : <a href="{{recipe.sourceUrl}}">{{recipe.sourceUrl}}</a></p>-->
 			
 			<h5>Ingredients</h5>
 
