--- a/src/app/recipe-search/recipe-search.component.css
+++ b/src/app/recipe-search/recipe-search.component.css
@@ -1,3 +1,15 @@
 app-autofocus-input {
 	margin-left : 15px;
 }
+
+[md-icon-button] {
+	
+	vertical-align: top;
+	
+	/*	
+	background-color: red;
+	color: white;
+	*/
+
+	
+}
